# assembly_example

./: CMakeLists.txt  README.md  package.xml
docker/: assembly_entrypoint.sh  build_plug.sh  build_screw.sh  docker-compose.plugging.yml  docker-compose.rosbag.yml  docker-compose.screwing.yml  plug.Dockerfile  screw.Dockerfile  watcher.Dockerfile  watcher.sh
docker/assembly_example_ros/: CMakeLists.txt
docker/assembly_example_ros/launch/: assembly_plug.launch  assembly_screw.launch
docker/assembly_example_ros/nodes/: assembly_plug  assembly_screw
launch/: assembly_example.launch
nodes/: assembly_example
scripts/: assembly_example.py
